k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: institutoipi
  namespace: institutoipi
spec:
  selector:
    app: institutoipi
  ports:
    - port: 80
      targetPort: 3000
